--- a/Copia_de_OOP.ipynb
+++ b/Copia_de_OOP.ipynb
@@ -174,7 +174,7 @@
         "class ClasePrueba:\n",
         "  pass"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
         "    self.engine = engine\n",
         "    self.color = color"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -227,14 +227,14 @@
         "car_1 = Car(engine='v6', color='black')\n",
         "car_2 = Car(engine='v8', color='blue')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "2BNS_skv0cbH",
-        "outputId": "2ed22b42-db36-4990-e14c-00bd160322cb",
+        "outputId": "1b524efc-6192-4ee7-922c-0afb98fdc171",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
@@ -243,7 +243,7 @@
       "source": [
         "car_1.engine"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,7 +258,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -266,7 +266,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "yjEy5vyz0eYC",
-        "outputId": "458fe994-9d71-4ddb-bd7a-b1438b93d33c",
+        "outputId": "34018042-2aab-4587-9f4e-33ffd03de63a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
@@ -275,7 +275,7 @@
       "source": [
         "car_2.engine"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -290,7 +290,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -309,6 +309,97 @@
         "- Tipo\n",
         "\n",
         "Para ello utiliza el comando class y define el constructor de la clase."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LCAlYsM8L7HP"
+      },
+      "source": [
+        "class Apple:\n",
+        "  def __init__(self, color, weight, type):\n",
+        "    self.color = color\n",
+        "    self.weight = weight\n",
+        "    self.type = type"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fp7fszBEMQEV"
+      },
+      "source": [
+        "apple_1 = Apple(color=\"red\", weight=\"20\", type=\"fuji\")\n",
+        "apple_2 = Apple(color=\"yellow\", weight=\"25\", type=\"golden\")"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x6VI5NywMrjh",
+        "outputId": "015dbc8e-d4d4-449b-9eca-e65f25b14d0c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "apple_1.color"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'red'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z09v-MEWMu3R",
+        "outputId": "afd418f3-e58a-4ad3-946a-40e782cae252",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "apple_2.type"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'golden'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
       ]
     },
     {
@@ -343,7 +434,7 @@
         "  def describe_car(self):\n",
         "    print(f\"El coche inicializado posee un motor {self.engine} y es {self.color}\")"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -359,7 +450,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0ViwAvGT26yv",
-        "outputId": "e6272269-4c3b-4572-e958-851f4ec6bc2e",
+        "outputId": "2acfbd2f-84f1-4917-aca8-5267e768edb6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
@@ -370,7 +461,7 @@
         "print(car_1.color)\n",
         "car_1.describe_car()  "
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,6 +494,62 @@
         "\n",
         "Completad la clase Apple añadiendo 3 métodos para describir el color, peso y tipo de la manzana."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-BO08g6xM75J"
+      },
+      "source": [
+        "class Apple:\n",
+        "  def __init__(self, color, weight, type):\n",
+        "    self.color = color\n",
+        "    self.weight = weight\n",
+        "    self.type = type\n",
+        "\n",
+        "  def describe_apple(self):\n",
+        "    print(f\"La manzana inicializada es {self.type} de color {self.color} y pesa {self.weight} gramos\")"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F6xTpcnqM8GD",
+        "outputId": "4869b888-e415-44d1-eef6-e2b9883726e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
+      },
+      "source": [
+        "apple_1 = Apple(color=\"red\", weight=\"20\", type=\"fuji\")\n",
+        "print(apple_1.color)\n",
+        "apple_1.describe_apple()  "
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "red\n",
+            "La manzana inicializada es fuji de color red y pesa 20 gramos\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F9oCbFUtM8TU"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
