--- a/Copia_de_Ejercicio_batmobile.ipynb
+++ b/Copia_de_Ejercicio_batmobile.ipynb
@@ -90,6 +90,77 @@
         "id": "5KRf86H9TY82"
       },
       "source": [
+        "class Batmobile:\n",
+        "  def __init__(self, pilot, list_batrockets, list_pem, list_gas):\n",
+        "    self.pilot = pilot\n",
+        "    for batrockets in list_batrockets:\n",
+        "      if isinstance(batrockets, Rocket):\n",
+        "        pass\n",
+        "      else:\n",
+        "        raise Exception(\"Not enough batrockets in the arsenal\")\n",
+        "    self.list_batrockets = list_batrockets\n",
+        "    self.batrockets = 0\n",
+        "    for pem in list_pem:\n",
+        "      if isinstance(pem, PEM_Pulse):\n",
+        "        pass\n",
+        "      else:\n",
+        "        raise Exception(\"Not enough PEM pulses in the arsenal\")\n",
+        "    self.list_pem = list_pem\n",
+        "    self.pem = 0\n",
+        "    self.list_gas = list_gas\n",
+        "\n",
+        "class Joker:\n",
+        "  pass\n",
+        "\n",
+        "class Joker_Villain:\n",
+        "  pass\n",
+        "\n",
+        "class Rocket:\n",
+        "  def __init__(self, batrockets):\n",
+        "    self.batrockets = batrockets\n",
+        "\n",
+        "class PEM_Pulse:\n",
+        "  def __init__(self, pem):\n",
+        "    self.pem = pem"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m6YiOxwCbpnN",
+        "outputId": "50abd0f9-0ad7-438c-d7cd-ebcba19ba55a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 189
+        }
+      },
+      "source": [
+        "list_batrockets = [Batmobile(10)]\n",
+        "list_pem = [Batmobile(5)]\n"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-512d7ca9efa4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlist_batrockets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mBatmobile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlist_pem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mBatmobile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: __init__() missing 3 required positional arguments: 'list_batrockets', 'list_pem', and 'list_gas'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nLTUH778cWlG"
+      },
+      "source": [
         ""
       ],
       "execution_count": null,
