--- a/Copia_de_Ejercicio_batmobile.ipynb
+++ b/Copia_de_Ejercicio_batmobile.ipynb
@@ -118,42 +118,15 @@
         "class Rocket:\n",
         "  def __init__(self, batrockets):\n",
         "    self.batrockets = batrockets\n",
+        "    self.list_batrockets = []\n",
         "\n",
         "class PEM_Pulse:\n",
         "  def __init__(self, pem):\n",
-        "    self.pem = pem"
+        "    self.pem = pem\n",
+        "    self.list_pem = []"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "m6YiOxwCbpnN",
-        "outputId": "50abd0f9-0ad7-438c-d7cd-ebcba19ba55a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 189
-        }
-      },
-      "source": [
-        "list_batrockets = [Batmobile(10)]\n",
-        "list_pem = [Batmobile(5)]\n"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-512d7ca9efa4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlist_batrockets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mBatmobile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlist_pem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mBatmobile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: __init__() missing 3 required positional arguments: 'list_batrockets', 'list_pem', and 'list_gas'"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
