--- a/Copia_de_ML_Exercises.ipynb
+++ b/Copia_de_ML_Exercises.ipynb
@@ -67,7 +67,7 @@
       "source": [
         "# Exercise 02 - 2 Points:\n",
         "\n",
-        "Now that you have your own framework to work using ML, I propose you to solve the same classification exercise of the pinguins dataset using one of the follow algorithms:\n",
+        "Now that you have your own framework to work using ML, I propose you to solve the same classification exercise of the penguins dataset using one of the follow algorithms:\n",
         "\n",
         "- Logistic Regressions - https://towardsdatascience.com/introduction-to-logistic-regression-66248243c148#:~:text=Logistic%20Regression%20is%20a%20Machine,on%20the%20concept%20of%20probability.&text=The%20hypothesis%20of%20logistic%20regression,function%20between%200%20and%201%20.\n",
         "- Naive Bayes - https://towardsdatascience.com/naive-bayes-classifier-explained-50f9723571ed#:~:text=Naive%20Bayes%20is%20a%20supervised,prediction%20on%20a%20target%20variable.\n",
@@ -79,7 +79,366 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6iKhWi_NAlUN"
+        "id": "ORxeZwkVOMzt"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns"
+      ],
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P0KTUGG5ONVy",
+        "outputId": "f70761e2-767f-4e73-cbe7-d30e15e40167",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        }
+      },
+      "source": [
+        "dataset = sns.load_dataset(\"penguins\")\n",
+        "dataset.dropna(inplace=True)\n",
+        "dataset.head()"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>species</th>\n",
+              "      <th>island</th>\n",
+              "      <th>bill_length_mm</th>\n",
+              "      <th>bill_depth_mm</th>\n",
+              "      <th>flipper_length_mm</th>\n",
+              "      <th>body_mass_g</th>\n",
+              "      <th>sex</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Adelie</td>\n",
+              "      <td>Torgersen</td>\n",
+              "      <td>39.1</td>\n",
+              "      <td>18.7</td>\n",
+              "      <td>181.0</td>\n",
+              "      <td>3750.0</td>\n",
+              "      <td>Male</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Adelie</td>\n",
+              "      <td>Torgersen</td>\n",
+              "      <td>39.5</td>\n",
+              "      <td>17.4</td>\n",
+              "      <td>186.0</td>\n",
+              "      <td>3800.0</td>\n",
+              "      <td>Female</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Adelie</td>\n",
+              "      <td>Torgersen</td>\n",
+              "      <td>40.3</td>\n",
+              "      <td>18.0</td>\n",
+              "      <td>195.0</td>\n",
+              "      <td>3250.0</td>\n",
+              "      <td>Female</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Adelie</td>\n",
+              "      <td>Torgersen</td>\n",
+              "      <td>36.7</td>\n",
+              "      <td>19.3</td>\n",
+              "      <td>193.0</td>\n",
+              "      <td>3450.0</td>\n",
+              "      <td>Female</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Adelie</td>\n",
+              "      <td>Torgersen</td>\n",
+              "      <td>39.3</td>\n",
+              "      <td>20.6</td>\n",
+              "      <td>190.0</td>\n",
+              "      <td>3650.0</td>\n",
+              "      <td>Male</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  species     island  bill_length_mm  ...  flipper_length_mm  body_mass_g     sex\n",
+              "0  Adelie  Torgersen            39.1  ...              181.0       3750.0    Male\n",
+              "1  Adelie  Torgersen            39.5  ...              186.0       3800.0  Female\n",
+              "2  Adelie  Torgersen            40.3  ...              195.0       3250.0  Female\n",
+              "4  Adelie  Torgersen            36.7  ...              193.0       3450.0  Female\n",
+              "5  Adelie  Torgersen            39.3  ...              190.0       3650.0    Male\n",
+              "\n",
+              "[5 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WIoWSksGTCif"
+      },
+      "source": [
+        "numeric = dataset.select_dtypes('number')\n",
+        "X = dataset.drop(\"sex\", axis=1)\n",
+        "X_dummies = pd.get_dummies(X)\n",
+        "Y = dataset[\"sex\"]"
+      ],
+      "execution_count": 103,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cWQ2Vtr-cB-A",
+        "outputId": "52cc3708-0192-4e51-f8f1-6febfcf0fba5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "Y_train.shape"
+      ],
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(249,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 125
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YSSETDwNTv1m"
+      },
+      "source": [
+        "X_train, X_test, Y_train, Y_test = train_test_split(X_dummies, Y, test_size=0.3, random_state=43)"
+      ],
+      "execution_count": 186,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4S3udEdBTv4e",
+        "outputId": "306f272f-a65b-4ee0-e33c-6052b37e7830",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model = GaussianNB()\n",
+        "model.fit(X_train, Y_train)"
+      ],
+      "execution_count": 187,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "GaussianNB(priors=None, var_smoothing=1e-09)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 187
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fJsJP6CbZh-p",
+        "outputId": "8e6fc6ef-5131-459d-a71b-894ad352c102",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_train, Y_train)"
+      ],
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7682403433476395"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 188
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nBWOa2JzZiUk",
+        "outputId": "68fb2c22-897e-4f74-855a-de88d5663ab2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_test, Y_test)"
+      ],
+      "execution_count": 189,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.75"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 189
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZlAzISyZTv7m",
+        "outputId": "c48d2ce7-fb65-4434-ba48-989f6aefdaac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "Y_pred = model.predict(X_test)\n",
+        "Y_pred"
+      ],
+      "execution_count": 190,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Female', 'Male', 'Female', 'Male', 'Female', 'Male', 'Female',\n",
+              "       'Female', 'Male', 'Female', 'Male', 'Male', 'Female', 'Male',\n",
+              "       'Female', 'Female', 'Female', 'Male', 'Female', 'Female', 'Male',\n",
+              "       'Female', 'Male', 'Male', 'Female', 'Male', 'Female', 'Male',\n",
+              "       'Female', 'Female', 'Female', 'Male', 'Female', 'Male', 'Male',\n",
+              "       'Female', 'Female', 'Male', 'Male', 'Male', 'Female', 'Female',\n",
+              "       'Male', 'Female', 'Male', 'Female', 'Male', 'Male', 'Male',\n",
+              "       'Female', 'Male', 'Female', 'Male', 'Male', 'Female', 'Female',\n",
+              "       'Male', 'Female', 'Female', 'Female', 'Male', 'Male', 'Male',\n",
+              "       'Female', 'Male', 'Female', 'Female', 'Female', 'Female', 'Male',\n",
+              "       'Male', 'Female', 'Female', 'Male', 'Female', 'Female', 'Female',\n",
+              "       'Female', 'Female', 'Male', 'Female', 'Male', 'Female', 'Male',\n",
+              "       'Male', 'Female', 'Female', 'Male', 'Female', 'Male', 'Male',\n",
+              "       'Male', 'Female', 'Male', 'Female', 'Female', 'Female', 'Male',\n",
+              "       'Female', 'Female'], dtype='<U6')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 190
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NymNc0WXVlte",
+        "outputId": "838e392a-c31b-47e6-c4bd-5adeb52d8efd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "accuracy = accuracy_score(Y_test, Y_pred)\n",
+        "accuracy"
+      ],
+      "execution_count": 191,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.75"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 191
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XfwfZhTfVqF5"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YCRQdpiwY-yt"
       },
       "source": [
         ""
