--- a/Copia_de_Hunger_games.ipynb
+++ b/Copia_de_Hunger_games.ipynb
@@ -56,7 +56,7 @@
         "dataframe.drop(\"Unnamed: 0\", axis=1, inplace=True)\n",
         "dataframe.columns = [\"refractive_index\", \"sodium\", \"magnesium\", \"aluminum\", \"silicon\", \"potassium\", \"calcium\", \"barium\", \"iron\", \"type_of_glass\"]"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,16 +72,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "4Dz5dnmSN7gw",
-        "outputId": "ceceedb1-5411-4ea3-fe54-b9be6b2ba478",
+        "outputId": "b4395b10-b928-4746-926e-edf7314b864f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 379
+          "height": 363
         }
       },
       "source": [
         "dataframe.head(10)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,7 +271,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 2
         }
       ]
     },
@@ -299,7 +299,389 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "opLEZ4j5o2mY"
+      },
+      "source": [
+        "import seaborn as sns\n",
+        "import pandas as pd\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.tree import plot_tree\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import roc_curve, roc_auc_score\n",
+        "import plotly.express as px"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "XIA1PjH7UI3U"
+      },
+      "source": [
+        "X = dataframe.drop(\"type_of_glass\", axis=1)\n",
+        "Y = dataframe[\"type_of_glass\"]\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y)"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wYmzRwDtow1J",
+        "outputId": "9fa650d7-391b-4acc-a8e7-eb8a6628be2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model = DecisionTreeClassifier(criterion=\"entropy\")\n",
+        "model.fit(X_train, Y_train)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DecisionTreeClassifier(ccp_alpha=0.0, class_weight=None, criterion='entropy',\n",
+              "                       max_depth=None, max_features=None, max_leaf_nodes=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, presort='deprecated',\n",
+              "                       random_state=None, splitter='best')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BrgeELPXpXil",
+        "outputId": "f0be66d2-f0e3-44cc-855d-f11dbf263fa4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_train, Y_train)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bvwdvYIKphOY",
+        "outputId": "414243fd-4bcd-4ba4-aa94-ff0fa70794d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_test, Y_test)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6666666666666666"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RCSnCrZZplvJ"
+      },
+      "source": [
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.metrics import accuracy_score"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hqYN4Hslp7IY",
+        "outputId": "d404b12c-f4ff-436c-f1d2-42df45c97c53",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model = GaussianNB()\n",
+        "model.fit(X_train, Y_train)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "GaussianNB(priors=None, var_smoothing=1e-09)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4wejySyGr9tH",
+        "outputId": "a56b324f-6c23-42f4-a9a8-0d6285cd7363",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_train, Y_train)"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7011494252873564"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nQdjLvtQr90_",
+        "outputId": "0fcc546c-250d-46d7-a1a4-58bbfe78b336",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_test, Y_test)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.43333333333333335"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ce9FdpvAp9KD",
+        "outputId": "7644c880-5e00-4641-e6bf-c9bcb9afce7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "Y_pred = model.predict(X_test)\n",
+        "Y_pred"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 1, 2, 1, 1, 1, 6, 1, 1, 1, 7, 1, 5, 1, 1, 1, 7, 1, 1, 1,\n",
+              "       1, 1, 1, 7, 1, 2, 7, 1])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fe9_QCfOqFpQ",
+        "outputId": "4bb5e927-f3e8-453c-cd68-2ccba95b884a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "accuracy = accuracy_score(Y_test, Y_pred)\n",
+        "accuracy"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.43333333333333335"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C5f8H1uiqIXQ",
+        "outputId": "d831e28b-fb03-47c5-e0f0-1ef36bff5780",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model = LogisticRegression()\n",
+        "model.fit(X_train, Y_train)"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning:\n",
+            "\n",
+            "lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+              "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+              "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
+              "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+              "                   warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CwsDcJQAq2OI",
+        "outputId": "a5537fef-a8f7-41cb-dd24-a865461c4511",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_test, Y_test)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.43333333333333335"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "swAcQVYXrGCN",
+        "outputId": "e7cd977b-bf32-4d70-88d6-b5c4c812bafa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_train, Y_train)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.632183908045977"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QiF3Q4vErKrL"
       },
       "source": [
         ""
