--- a/Copia_de_Ejercicio_batmobile.ipynb
+++ b/Copia_de_Ejercicio_batmobile.ipynb
@@ -87,6 +87,48 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "WKtgkJD9wxPL"
+      },
+      "source": [
+        "class Batmobile:\n",
+        "  def __init__(self, pilot, batrockets_loaded, pem_left, gas_left):\n",
+        "    self.pilot = pilot\n",
+        "    self.batrockets_loaded = batrockets_loaded\n",
+        "    self.pem_left = pem_left\n",
+        "    self.gas_left = gas_left\n",
+        "  def accelerate(self):\n",
+        "    pass\n",
+        "  def turbo(self):\n",
+        "    pass\n",
+        "  def launch_rocket(self):\n",
+        "    pass\n",
+        "  def launch_pem(self):\n",
+        "    pass\n",
+        "\n",
+        "class Joker:\n",
+        "  def __init__(self, KO, weapon):\n",
+        "    self.KO = KO\n",
+        "    self.weapon = weapon\n",
+        "\n",
+        "class Joker_Villain:\n",
+        "  def __init__(self, KO, weapon):\n",
+        "    self.KO = KO\n",
+        "    self.weapon = weapon\n",
+        "\n",
+        "class Rocket:\n",
+        "  def __init__(self, batrockets):\n",
+        "    self.batrockets = batrockets\n",
+        "\n",
+        "class PEM_Pulse:\n",
+        "  def __init__(self, pem):\n",
+        "    self.pem = pem"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "5KRf86H9TY82"
       },
       "source": [
@@ -132,42 +174,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "nLTUH778cWlG"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "J5GfWZLc_yLS"
-      },
-      "source": [
-        "class Batmobile:\n",
-        "  pass\n",
-        "\n",
-        "class Joker:\n",
-        "  pass\n",
-        "\n",
-        "class Joker_Villain:\n",
-        "  pass\n",
-        "\n",
-        "class Rocket:\n",
-        "  pass\n",
-        "\n",
-        "class PEM_Pulse:\n",
-        "  pass\n",
-        "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "OU6PMSgys-zE"
       },
       "source": [
         ""
