--- a/Copia_de_Ejercicio_batmobile.ipynb
+++ b/Copia_de_Ejercicio_batmobile.ipynb
@@ -97,7 +97,9 @@
         "    self.pem_left = pem_left\n",
         "    self.gas_left = gas_left\n",
         "  def accelerate(self):\n",
-        "    pass\n",
+        "    liters = 10000\n",
+        "    for gas in gas_left:\n",
+        "      \n",
         "  def turbo(self):\n",
         "    pass\n",
         "  def launch_rocket(self):\n",
@@ -122,50 +124,6 @@
         "class PEM_Pulse:\n",
         "  def __init__(self, pem):\n",
         "    self.pem = pem"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5KRf86H9TY82"
-      },
-      "source": [
-        "class Batmobile:\n",
-        "  def __init__(self, pilot, list_batrockets, list_pem, list_gas):\n",
-        "    self.pilot = pilot\n",
-        "    for batrockets in list_batrockets:\n",
-        "      if isinstance(batrockets, Rocket):\n",
-        "        pass\n",
-        "      else:\n",
-        "        raise Exception(\"Not enough batrockets in the arsenal\")\n",
-        "    self.list_batrockets = list_batrockets\n",
-        "    self.batrockets = 0\n",
-        "    for pem in list_pem:\n",
-        "      if isinstance(pem, PEM_Pulse):\n",
-        "        pass\n",
-        "      else:\n",
-        "        raise Exception(\"Not enough PEM pulses in the arsenal\")\n",
-        "    self.list_pem = list_pem\n",
-        "    self.pem = 0\n",
-        "    self.list_gas = list_gas\n",
-        "\n",
-        "class Joker:\n",
-        "  pass\n",
-        "\n",
-        "class Joker_Villain:\n",
-        "  pass\n",
-        "\n",
-        "class Rocket:\n",
-        "  def __init__(self, batrockets):\n",
-        "    self.batrockets = batrockets\n",
-        "    self.list_batrockets = []\n",
-        "\n",
-        "class PEM_Pulse:\n",
-        "  def __init__(self, pem):\n",
-        "    self.pem = pem\n",
-        "    self.list_pem = []"
       ],
       "execution_count": null,
       "outputs": []
